did a bunch of margins/padding, setting position to be fixed as well as modifying the flexboxes in order that we can still see all the divs properly.  Ultimately we want to remove the overflow: hidden setting from the css, and I think the user interface has largely improved.

--- a/public/bootstrap.css
+++ b/public/bootstrap.css
@@ -10,6 +10,16 @@ html {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
 }
+#bootstrapId {
+  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: scroll;
+}
+* {
+  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: scroll;
+}
 body {
   margin: 0;
 }
