--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,9 @@
+* {
+  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: scroll;
+}
+
 body {
   font-family: sans-serif;
 }
@@ -5,9 +11,7 @@ body {
 a {
   text-decoration: none;
 }
-body {
-  font-family: sans-serif;
-}
+
 #center {
   flex: 4;
   display: flex;
@@ -86,6 +90,10 @@ nav a {
   align-content: space-around;
   flex-flow: row;
   flex-wrap: wrap;
+  position: fixed;
+  height: 100vh;
+  padding-bottom: 50vh;
+  padding-top: 50vh;
 }
 
 .studentClassDashboard .classTitle {
@@ -309,12 +317,19 @@ nav a {
   flex-direction: row;
   flex-wrap: wrap;
   height: auto;
+  /* position: fixed; */
+  height: 100vh;
+  /* padding-bottom: 500px; */
+  /* padding-top: 50vh; */
+  overflow-y: scroll;
 }
 
 .teacherClassBoard .classboardList {
   border-style: outset;
   width: 100%;
   text-align: center;
+  height: 5em;
+  overflow-y: scroll;
 }
 
 .teacherClassBoard .classboardSchedule {
@@ -322,15 +337,23 @@ nav a {
   background-color: grey;
   display: flex;
   flex-direction: column;
-  margin: 10%;
+  margin: 2em;
   padding: 1em;
-  width: auto;
+  position: relative;
+  width: 10em;
+  height: 10em;
+}
+
+.teacherClassBoard .teacherClassboardOptions {
+  display: flex;
+  flex-direction: row;
 }
 
 .teacherClassBoard .classboardStartLecture {
   background-color: orange;
   padding: 1em;
   border-style: outset;
+  height: 5em;
 }
 
 .teacherClassBoard .classboardStartLecture:hover,
@@ -346,6 +369,27 @@ nav a {
 .teacherClassBoard .classboardAttendance {
   background-color: limegreen;
   padding: 1em;
+  overflow-y: scroll;
+  height: 5em;
+}
+
+.attendanceComponent {
+  overflow-y: scroll;
+  padding-bottom: 1000px;
+  width: 100vw;
+  height: 5em;
+}
+
+.assignmentViewMainDiv {
+  overflow-y: scroll;
+  padding-bottom: 1000px;
+  width: 10000px;
+}
+
+.assignmentsByStudent {
+  overflow-y: scroll;
+  padding-bottom: 1000px;
+  width: 100vw;
 }
 
 .teacherClassBoard .classboardAttendance:focus {
@@ -355,6 +399,7 @@ nav a {
 .teacherClassBoard .classboardAssignments {
   background-color: purple;
   padding: 1em;
+  height: 5em;
 }
 
 .teacherClassBoard .classboardAssignments:focus {
@@ -364,6 +409,7 @@ nav a {
 .teacherClassBoard .classboardAddAssignment {
   background-color: purple;
   padding: 1em;
+  height: 5em;
 }
 
 .teacherClassBoard .classboardAddAssignment:focus {
@@ -373,6 +419,7 @@ nav a {
 .teacherClassBoard .classboardStudent {
   background-color: rgba(128, 0, 0, 0.288);
   padding: 1em;
+  height: 5em;
 }
 
 .teacherClassBoard .classboardStudent:focus {
@@ -382,6 +429,7 @@ nav a {
 .teacherClassBoard .classboardAddStudent {
   background-color: rgba(128, 0, 0, 0.288);
   padding: 1em;
+  height: 5em;
 }
 
 .teacherClassBoard .classboardAddStudent:focus {
@@ -390,7 +438,9 @@ nav a {
 
 .teacherClassBoard .scheduleDashBox {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  /* margin-top: -10em; */
+  margin-bottom: 10em;
 }
 
 .teacherClassBoard .scheduleDashBox button {
